--- a/src/main/resources/static/books.html
+++ b/src/main/resources/static/books.html
@@ -1,15 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
   <meta charset="UTF-8">
   <title>Bill Gates - books</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+  </script>
+
+  <script src="js/books_table.js"></script>
+  <link rel="stylesheet" href="css/expand_main.css">
 </head>
 <body>
-<header>
-  <ul>
-    <li><a href="home.html">home</a></li>
-    <li><a href="contacts.html">contacts</a></li>
-  </ul>
+<header class="bg-dark text-white py-3">
+  <div class="container">
+    <h1 class="text-center">Bill Gates</h1>
+    <nav class="d-flex justify-content-center">
+      <ul class="nav">
+        <li class="nav-item"><a class="nav-link text-white" href="home.html">Home</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contatta</a></li>
+        <li class="nav-item">
+          <a class="nav-link active text-white fw-bold" aria-current="page" href="books.html">Libri</a>
+        </li>
+      </ul>
+    </nav>
+  </div>
 </header>
+
+<main class="container my-5">
+  <section>
+    <table class="table table-striped table-bordered text-center">
+      <caption>Libri di Bill Gates</caption>
+      <thead class="table-light">
+      <tr>
+        <th>n.</th>
+        <th>Titolo</th>
+        <th>Anno</th>
+        <th>Casa Editrice</th>
+      </tr>
+      </thead>
+      <tbody id="booksTableBody">
+      <tr>
+        <td>1</td>
+        <td>The Road Ahead</td>
+        <td>1995</td>
+        <td>Viking Penguin</td>
+      </tr>
+      <tr>
+        <td>2</td>
+        <td>Business @ the Speed of Thought: Succeeding in the Digital Economy</td>
+        <td>1999</td>
+        <td>Warner Books</td>
+      </tr>
+      <tr>
+        <td>3</td>
+        <td>How to Avoid a Climate Disaster: The Solutions We Have and the Breakthroughs We Need</td>
+        <td>2021</td>
+        <td>Knopf</td>
+      </tr>
+      </tbody>
+    </table>
+  </section>
+
+  <section>
+    <p class="d-inline-flex gap-1">
+      <button class="btn btn-outline-primary" type="button" data-bs-toggle="collapse" data-bs-target="#collapseForm" aria-expanded="false" aria-controls="collapseForm">
+        Modifica Tabella
+      </button>
+    </p>
+    <div class="collapse" id="collapseForm">
+      <div class="card card-body">
+        <form class="input-group mb-3" action="#">
+          <input type="text" class="form-control w-auto" placeholder="Titolo" aria-label="Titolo" aria-describedby="addBookButton" id="bookTitle" required>
+          <input type="number" min="0" class="form-control w-auto" placeholder="Anno" aria-label="Anno" aria-describedby="addBookButton" id="bookYear" required>
+          <input type="text" class="form-control w-auto" placeholder="Casa Editrice" aria-label="Casa Editrice" aria-describedby="addBookButton" id="bookPublisher" required>
+          <button class="btn btn-outline-primary" type="submit" id="addBookButton">Aggiungi Libro</button>
+        </form>
+
+        <form class="input-group mb-3" action="#">
+          <input type="number" min="1" class="form-control" placeholder="Numero Libro" aria-label="Numero Libro" aria-describedby="removeBookButton" id="bookNumber" required>
+          <button class="btn btn-outline-danger" type="submit" id="removeBookButton">Rimuovi Libro</button>
+        </form>
+      </div>
+    </div>
+  </section>
+</main>
+
+
+<footer class="bg-dark text-center text-white py-3">
+  <p>2024 - Web Application - Unical - All Rights Reserved</p>
+</footer>
+
 </body>
 </html>
