--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -1,33 +1,56 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="it">
 <head>
   <meta charset="UTF-8">
   <title>Bill Gates - home</title>
+
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
+  </script>
+  <link rel="stylesheet" href="css/expand_main.css">
 </head>
 <body>
-<header>
-  <h1>Bill Gates</h1>
-  <nav>
-    <ul>
-      <li><a href="contacts.html">contact</a></li>
-      <li><a href="books.html">books</a></li>
-    </ul>
-  </nav>
+<header class="bg-dark text-white py-3">
+  <div class="container">
+    <h1 class="text-center">Bill Gates</h1>
+    <nav class="d-flex justify-content-center">
+      <ul class="nav">
+        <li class="nav-item">
+          <a class="nav-link active text-white fw-bold" aria-current="page" href="home.html">Home</a>
+        </li>
+        <li class="nav-item"><a class="nav-link text-white" href="contact.html">Contatta</a></li>
+        <li class="nav-item"><a class="nav-link text-white" href="books.html">Libri</a></li>
+      </ul>
+    </nav>
+  </div>
 </header>
-<main>
-  <section>
-    <img src="img/Bill-Gates-2011.webp" alt="bill gates photo">
-    <h5>Biografia</h5>
-    <p>
-      Bill Gates è un imprenditore, programmatore e filantropo statunitense, noto per essere il co-fondatore di
-      Microsoft, una delle aziende tecnologiche più influenti al mondo. Nato a Seattle nel 1955, Gates ha dimostrato
-      sin da giovane un grande interesse per la programmazione, e nel 1975 ha fondato Microsoft insieme a Paul Allen,
-      contribuendo alla nascita del personal computer.
-    </p>
+
+<main class="container my-5">
+  <section class="mb-5">
+    <div class="card mb-3" style="max-width: 610px">
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="img/Bill-Gates-2011.webp" class="img-fluid rounded-start" alt="Foto di Bill Gates">
+        </div>
+        <div class="col-md-8">
+          <div class="card-body">
+            <h3 class="card-title">Biografia</h3>
+            <p class="card-text">
+              Bill Gates è un imprenditore, programmatore e filantropo statunitense, noto per essere il co-fondatore di
+              Microsoft, una delle aziende tecnologiche più influenti al mondo. Nato a Seattle nel 1955, Gates ha
+              dimostrato sin da giovane un grande interesse per la programmazione, e nel 1975 ha fondato Microsoft
+              insieme a Paul Allen, contribuendo alla nascita del personal computer.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </section>
 
-  <section>
-    <h2>Un nuovo approccio all'interazione con la tecnologia</h2>
+  <section class="mb-5">
+    <h3 class="text-dark">Un nuovo approccio all'interazione con la tecnologia</h3>
     <p>
       Sotto la sua guida, Microsoft ha lanciato prodotti iconici come il sistema operativo Windows, cambiando il modo
       in cui miliardi di persone interagiscono con la tecnologia.
@@ -35,12 +58,17 @@
   </section>
 
   <section>
-    <h2>Attività recenti</h2>
+    <h3 class="text-dark">Attività recenti</h3>
     <p>
       Oltre alla sua carriera tecnologica, Gates è oggi noto per il suo impegno filantropico attraverso la Bill & Melinda
       Gates Foundation, che si occupa di salute globale, educazione e sviluppo sostenibile.
     </p>
   </section>
 </main>
+
+<footer class="bg-dark text-center text-white py-3">
+  <p>2024 - Web Application - Unical - All Rights Reserved</p>
+</footer>
+
 </body>
 </html>
