Aggiunto più contenuto alla pagina home.html

--- a/src/main/resources/static/home.html
+++ b/src/main/resources/static/home.html
@@ -29,19 +29,25 @@
 
 <main class="container my-5">
   <section class="mb-5">
-    <div class="card mb-3" style="max-width: 610px">
+    <div class="card mb-3">
       <div class="row g-0">
-        <div class="col-md-4">
+        <div class="col-2">
           <img src="img/Bill-Gates-2011.webp" class="img-fluid rounded-start" alt="Foto di Bill Gates">
         </div>
-        <div class="col-md-8">
+        <div class="col-10 p-1">
           <div class="card-body">
             <h3 class="card-title">Biografia</h3>
             <p class="card-text">
               Bill Gates è un imprenditore, programmatore e filantropo statunitense, noto per essere il co-fondatore di
               Microsoft, una delle aziende tecnologiche più influenti al mondo. Nato a Seattle nel 1955, Gates ha
-              dimostrato sin da giovane un grande interesse per la programmazione, e nel 1975 ha fondato Microsoft
-              insieme a Paul Allen, contribuendo alla nascita del personal computer.
+              dimostrato sin da giovane un grande interesse per la programmazione. Nel 1975, ha fondato Microsoft
+              insieme a Paul Allen, contribuendo alla nascita del personal computer e rivoluzionando il modo in cui
+              le persone utilizzano la tecnologia.
+            </p>
+            <p class="card-text">
+              Durante la sua carriera, Gates ha guidato lo sviluppo di prodotti innovativi come il sistema operativo
+              Windows e la suite di software Microsoft Office. Questi prodotti hanno avuto un impatto significativo
+              sulla produttività e sulla comunicazione globale, rendendo la tecnologia accessibile a milioni di persone.
             </p>
           </div>
         </div>
@@ -53,7 +59,14 @@
     <h3 class="text-dark">Un nuovo approccio all'interazione con la tecnologia</h3>
     <p>
       Sotto la sua guida, Microsoft ha lanciato prodotti iconici come il sistema operativo Windows, cambiando il modo
-      in cui miliardi di persone interagiscono con la tecnologia.
+      in cui miliardi di persone interagiscono con la tecnologia. Gates ha sempre creduto nel potere della
+      tecnologia come strumento per migliorare la vita umana e ha promosso l'idea che l'accesso alla tecnologia
+      dovrebbe essere un diritto per tutti.
+    </p>
+    <p>
+      Oggi, Gates continua a sostenere progetti tecnologici che mirano a risolvere problemi globali, come il cambiamento
+      climatico, la salute pubblica e l'educazione. Attraverso il suo lavoro, spera di ispirare la prossima generazione
+      di innovatori a utilizzare la tecnologia per il bene comune.
     </p>
   </section>
 
@@ -61,7 +74,18 @@
     <h3 class="text-dark">Attività recenti</h3>
     <p>
       Oltre alla sua carriera tecnologica, Gates è oggi noto per il suo impegno filantropico attraverso la Bill & Melinda
-      Gates Foundation, che si occupa di salute globale, educazione e sviluppo sostenibile.
+      Gates Foundation, che si occupa di salute globale, educazione e sviluppo sostenibile. La fondazione ha investito
+      miliardi di dollari in programmi per la prevenzione delle malattie, la vaccinazione dei bambini e l'educazione
+      in paesi in via di sviluppo.
+    </p>
+    <p>
+      Nel 2021, Gates ha pubblicato il suo libro "Come evitare un disastro climatico", in cui espone le sue idee su
+      come affrontare le sfide climatiche attraverso l'innovazione e il cambiamento delle politiche. La sua visione
+      si basa sulla necessità di investimenti in tecnologie pulite e sull'impegno a ridurre le emissioni di carbonio.
+    </p>
+    <p>
+      Inoltre, Gates è un sostenitore della ricerca scientifica e dell'educazione STEM, incoraggiando i giovani a
+      perseguire carriere nelle scienze e nella tecnologia per affrontare le sfide future.
     </p>
   </section>
 </main>
